rp_1/project/old/smo/service-smo.yaml
apiVersion: v1
kind: Service
metadata:
  name: smo-service
  namespace: desire6g
  labels:
    app: smo
spec:
  selector:
    app: smo
  ports:
    - name: api-port
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
